<resources>
    <string name="app_name">MossikPlay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="click_to_sign_up">Click to Sign Up</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="click_to_login">Click to Login</string>
    <string name="menu_music">Music</string>
    <string name="menu_playlist">Playlist</string>
    <string name="music">Music</string>
    <string name="playlist">Playlist</string>
    <string name="MossikPlayer">MOSSIKPLAYER</string>
    <string name="song_title">Song Title</string>
    <string name="_00_00">00:00</string>
</resources>