<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mossikplay.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_music"
        android:name="com.example.mossikplay.ui.music.MusicFragment"
        android:label="@string/music"
        tools:layout="@layout/fragment_music" />

    <fragment
        android:id="@+id/nav_playlist"
        android:name="com.example.mossikplay.ui.playlists.PlaylistFragment"
        android:label="@string/menu_playlist"
        tools:layout="@layout/fragment_playlist" />
</navigation>